[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tests/Note.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Raleway-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Note" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -372.0
margin_bottom = -234.0
rect_min_size = Vector2( 100, 0 )
mouse_default_cursor_shape = 6
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shape" type="ColorRect" parent="."]
margin_right = 642.0
margin_bottom = 366.0
rect_min_size = Vector2( 90, 0 )
mouse_default_cursor_shape = 13
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 30.0
color = Color( 0.627451, 0.894118, 0.521569, 1 )

[node name="Label" type="Label" parent="Shape"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = " NOTA"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="ColorRect" parent="."]
margin_left = 642.0
margin_right = 652.0
margin_bottom = 366.0
rect_min_size = Vector2( 10, 0 )
mouse_default_cursor_shape = 10
size_flags_vertical = 3
color = Color( 0.34902, 0.733333, 0.196078, 1 )
[connection signal="mouse_entered" from="Shape" to="." method="_on_Shape_mouse_entered"]
[connection signal="mouse_exited" from="Shape" to="." method="_on_Shape_mouse_exited"]
[connection signal="mouse_entered" from="R" to="." method="_on_R_mouse_entered"]
[connection signal="mouse_exited" from="R" to="." method="_on_R_mouse_exited"]
